feat: 카메라 기능 개선 및 영수증 리스트 연결